refs #61 Use 40px instead of 45px.  Fixes overlap on screen monitor with h1

--- a/epochedu/static/css/teacher-v3.css
+++ b/epochedu/static/css/teacher-v3.css
@@ -16,7 +16,7 @@ a {
 
 h1 {
 	margin:0px;
-	padding:45px 25px;
+	padding:40px 25px;
 	font-size:2.3em;
 }
 
